Fix right-side whitespace issue on iOS, take 2

--- a/css/screen.css
+++ b/css/screen.css
@@ -12,9 +12,6 @@
 html,body
 {
     width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
     overflow-x: hidden; 
 }
 
